--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -7,7 +7,7 @@ html {
 body {
   background-color: lavenderblush;
   font-family: 'Open Sans', sans-serif;
-  font-size: 1.4rem;
+  font-size: 2.2rem;
 }
 
 button {
@@ -17,6 +17,7 @@ button {
   color: $white;
   cursor: pointer;
   height: 4rem;
+  min-width: 15rem;
 }
 
 button:disabled {
@@ -34,6 +35,19 @@ hr {
   width: 100%;
 }
 
-input[type="text"] {
-  width: 10rem;
+[type="text"] {
+  height: 2.2rem;
+  width: 15rem;
+}
+
+[type="checkbox"] {
+  margin-right: $xs-size;
+}
+
+label {
+  display: inline-block;
+  margin: 0 $xs-size $xs-size 0;
+}
+.disabled {
+  opacity: 0.55;
 }
