--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -4,8 +4,9 @@ $main-blue: #4C6582;
 $white: #ffffff;
 
 //Sizes
+$xs-size: .7rem;
 $s-size: 1.2rem;
-$m-size: 1.6rem;
+$m-size: 2rem;
 $l-size: 3.2rem;
 $xl-size: 4.8rem;
 
