--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,13 +1,16 @@
 //Colors
-$light-blue: #6485AB;
-$main-blue: #4C6582;
+$light-blue: #eeeeee;
+$main-blue: #1a2643;
+$dark-grey: #231f20;
+$bg-color: #f6f6f6;
 $white: #ffffff;
+$sandy-brown: #c79f5e;
 
 //Sizes
 $xs-size: .7rem;
-$s-size: 1.2rem;
+$s-size: 1.5rem;
 $m-size: 2rem;
-$l-size: 3.2rem;
+$l-size: 4rem;
 $xl-size: 4.8rem;
 
-$desktop-breakpoint: 45rem;
+$desktop-breakpoint: 1025px;
