--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -5,13 +5,13 @@ html {
 }
 
 body {
-  background-color: lavenderblush;
+  background-color: $white;
   font-family: 'Open Sans', sans-serif;
   font-size: 2.2rem;
 }
 
 button {
-  background-color: $light-blue;
+  background-color: $main-blue;
   border: none;
   border-radius: 0.6rem;
   color: $white;
@@ -36,8 +36,8 @@ hr {
 }
 
 [type="text"] {
-  height: 2.2rem;
-  width: 15rem;
+  height: $l-size;
+  width: 22rem;
 }
 
 [type="checkbox"] {
@@ -48,6 +48,11 @@ label {
   display: inline-block;
   margin: 0 $xs-size $xs-size 0;
 }
+
 .disabled {
   opacity: 0.55;
+}
+
+i.material-icons {
+  color: $main-blue;
 }
