--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,6 +1,8 @@
 @import './base/settings';
 @import './base/base';
 @import './components/container';
-@import './components/numbers-navigator';
-@import './components/page-navigator';
-@import './components/widget'
+@import './components/footer';
+@import './components/header';
+@import './components/snake-bar';
+@import './components/validating-widget';
+@import './components/widget';
