--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,6 +1,6 @@
 header.mdl-layout__header {
   height: 8rem;
-  font-family: 'Montserrat', sans-serif;
+  font-family: ''Montserrat', sans-serif', sans-serif;
   justify-content: space-between;
   align-items: center;
   flex-direction: row-reverse;
