--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -13,4 +13,9 @@ $m-size: 2rem;
 $l-size: 4rem;
 $xl-size: 4.8rem;
 
-$desktop-breakpoint: 1025px;
+// xs 14px
+// s 16px
+// m 18px
+// l 24px
+// xl 40 
+$desktop-breakpoint: 10.2rem;
