--- a/src/styles/components/_validating-widget.scss
+++ b/src/styles/components/_validating-widget.scss
@@ -4,12 +4,11 @@
   position: absolute;
   top: 0;
   width: 100vw;
-  height: 100vh;
+  height: 120vh;
   justify-content: center;
   align-items: center;
   position: absolute;
   background-color: rgba(255, 255, 255, 0.2);
-  height: 120vh;
 }
 
 .validating-widget__container {
@@ -28,7 +27,9 @@
   margin: 2rem;
 }
 
-.validating-widget__spinner-container img {
+.validating-widget__spinner-container .validating-widget--img {
+  width: auto;
+  height: auto;
   -webkit-animation:spin 1.5s linear infinite;
   -moz-animation:spin 1.5s linear infinite;
   animation:spin 2s1.5 linear infinite;
