--- a/src/styles/components/_validating-widget.scss
+++ b/src/styles/components/_validating-widget.scss
@@ -3,8 +3,9 @@
   display: flex;
   position: absolute;
   top: 0;
+  left: 0;
   width: 100vw;
-  height: 120vh;
+  height: 100vh;
   justify-content: center;
   align-items: center;
   position: absolute;
