--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -13,11 +13,31 @@ body {
 button {
   background-color: $main-blue;
   border: none;
-  border-radius: 0.6rem;
   color: $white;
   cursor: pointer;
-  height: 4rem;
-  min-width: 15rem;
+  min-width: 17.5rem;
+  height: 5.2rem;
+  padding: 0 $m-size;
+  font-family: 'Montserrat', sans-serif;
+  font-size: $s-size;
+  font-weight: 700;
+  border-radius: $round-corner;
+}
+
+button:disabled {
+  opacity: 0.7;
+  cursor: default;
+}
+
+button:hover:not(:disabled) {
+  opacity: 0.2;
+}
+
+button a {
+  color: $white;
+  text-decoration: none;
+  font-size: $m-size;
+  font-weight: 600;
 }
 
 button:disabled {
@@ -32,7 +52,8 @@ a.is-active {
 hr {
   border-style: solid;
   color: $light-blue;
-  width: 100%;
+  width: 85%;
+  margin: $xl-size auto;
 }
 
 [type="text"] {
