--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -8,6 +8,7 @@ $white: #ffffff;
 $sandy-brown: #c79f5e;
 
 //Sizes
+$xxs-size: 0.8rem;
 $xs-size: 1.4rem;
 $s-size: 1.6rem;
 $m-size: 1.8rem;
@@ -19,4 +20,6 @@ $xxl-size: 6.4rem;
 $round-corner: 0.8rem;
 $extra-round-corner: 1.2rem;
 
+//Screen breakpoints
 $desktop-breakpoint: 1025px;
+$mobile-breakpoint: 600px;
