--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -75,6 +75,10 @@ label {
   opacity: 0.55;
 }
 
+p.noto-font {
+  font-family: 'Noto Serif', serif; 
+}
+
 i.material-icons {
   color: $main-blue;
 }
@@ -90,7 +94,9 @@ i.material-icons {
 
 
 @media (min-width: $desktop-breakpoint) {
-
+  button {
+    font-size: $s-size;
+  }
 }
 
 @media (min-width: $mobile-breakpoint) {
