PIN page and step 3 page modifications

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -5,6 +5,7 @@ $dark-grey: #231f20;
 $bg-color: #f6f6f6;
 $msg-bg-color: #d9f1e1;
 $white: #ffffff;
+$error-red: #ff0000;
 $sandy-brown: #c79f5e;
 
 //Sizes
