--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -92,6 +92,20 @@ i.material-icons {
   height: 30px;
 }
 
+.error {
+  color: $error-red;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    /* display: none; <- Crashes Chrome on hover */
+    -webkit-appearance: none;
+    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
+
+input[type=number] {
+    -moz-appearance:textfield; /* Firefox */
+}
 
 @media (min-width: $desktop-breakpoint) {
   button {
