--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -8,4 +8,21 @@
 
 button {
   margin: 4rem;
+  border-radius: 50%;
+  height: 4.5rem;
+  width: 4.5rem;
+  border: none;
+  background: url(/assets/img/mic.svg) lavender center no-repeat;
+  background-size: 2.5rem;
+  cursor: pointer;
+}
+
+button:nth-child(2){
+  background: url(/assets/img/stop.svg) lavender center no-repeat;
+  background-size: 2.5rem;
+}
+
+.btn-wrapper {
+  display: flex;
+  justify-content: center;
 }
