Added export pdf + height for canvas

--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -44,7 +44,9 @@ td {
   width: 5rem;
   height: 5rem;
 }
-
+canvas {
+  min-width: 10rem;
+}
 .mini-stop, .mini-mic {
   width: 2rem;
   height: 2rem;
