added new table

--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -97,6 +97,9 @@ tr td:nth-child(2) {
 tr td:last-child   {
   width: 8rem;
 }
+.table-wrapper {
+  height: 1rem;
+}
 @keyframes lds-ring {
   0% {
     transform: rotate(0deg);
